# Engine

./: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: Engine.cpp  Engine.h
src/core/: Loader.h  Window.cpp  Window.h
